# fastcrud

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  add-auditing-system.md  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: fastcrud-feature-request.md  fastcrud-issue.md  showcase-submission.md
.github/workflows/: linting.yml  python-versions.yml  run-tests.yml  tests.yml  type-check.yml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
advanced/crud/: index.html
advanced/endpoint/: index.html
advanced/filters/: index.html
advanced/joins/: index.html
advanced/overview/: index.html
api/crud_router/: index.html
api/endpoint_creator/: index.html
api/fastcrud/: index.html
api/overview/: index.html
api/paginated/: index.html
changelog/: index.html
community/CODE_OF_CONDUCT/: index.html
community/CONTRIBUTING/: index.html
community/LICENSE/: index.html
community/overview/: index.html
community/showcase_submission/: index.html
docs/: CODE_OF_CONDUCT.md  LICENSE.md  changelog.md  index.md  installing.md  quick-start.md  showcase.md  sqlmodel.md
docs/advanced/: crud.md  dependency_filtering.md  endpoint.md  filters.md  joins.md  overview.md
docs/api/: crud_router.md  endpoint_creator.md  fastcrud.md  overview.md  paginated.md
docs/community/: CONTRIBUTING.md  overview.md  showcase_submission.md
docs/usage/: crud.md  endpoint.md  overview.md  response_keys.md
fastcrud/: __init__.py  endpoint_creator.py  types.py
fastcrud/audit/: __init__.py  auditable.py  context.py  logger.py  models.py
fastcrud/crud/: crud_base.py  fast_crud.py  helper.py
fastcrud/endpoint/: crud_router.py  endpoint_creator.py  helper.py
fastcrud/examples/: audit_example.py
fastcrud/examples/article/: model.py  schemas.py
fastcrud/examples/author/: model.py  schemas.py
fastcrud/examples/customer/: model.py  schemas.py
fastcrud/examples/department/: model.py  schemas.py
fastcrud/examples/item/: model.py  schemas.py  sqlmodel.py
fastcrud/examples/mymodel/: model.py  schemas.py
fastcrud/examples/order/: model.py  schemas.py
fastcrud/examples/product/: model.py  schemas.py
fastcrud/examples/profile/: model.py  schemas.py
fastcrud/examples/story/: model.py  schemas.py
fastcrud/examples/task/: model.py  schemas.py
fastcrud/examples/tier/: model.py  schemas.py
fastcrud/examples/user/: model.py  schemas.py
fastcrud/exceptions/: __init__.py  http_exceptions.py
fastcrud/paginated/: __init__.py  helper.py  response.py  schemas.py
installing/: index.html
quick-start/: index.html
search/: search_index.json
showcase/: index.html
sqlmodel/: index.html
tests/: conftest.py  min_main.py  test_apply_sorting.py
tests/crud/: test_apply_sorting.py  test_count.py  test_create.py  test_delete.py  test_exists.py  test_get.py  test_get_joined.py  test_get_multi.py  test_get_multi_by_cursor.py  test_get_multi_joined.py  test_update.py
tests/endpoint/: test_create_item.py  test_custom_endpoint_creator.py  test_deleted_methods.py  test_get_item.py  test_included_methods.py
tests/sqlalchemy/: conftest.py
tests/sqlalchemy/audit/: test_audit_logger.py  test_audit_models.py  test_auditable.py
tests/sqlalchemy/core/: test_dependency_filter.py  test_nest_multi_join_data.py  test_parse_filters.py  test_uuid.py  test_valid_methods.py
tests/sqlalchemy/crud/: test_apply_sorting.py  test_count.py  test_create.py  test_delete.py  test_exists.py  test_get.py  test_get_joined.py  test_get_multi.py  test_get_multi_by_cursor.py  test_get_multi_joined.py  test_get_multi_joined_total_count.py  test_multi_field_or_filter.py  test_select.py  test_sort_nested_relationships.py  test_update.py  test_upsert.py
tests/sqlalchemy/endpoint/: test_create_item.py  test_custom_endpoint_creator.py  test_custom_route.py  test_deleted_methods.py  test_dependency_filter.py  test_endpoint_custom_names.py  test_get_item.py  test_get_items.py  test_get_paginated.py  test_included_methods.py
tests/sqlalchemy/paginated/: test_schemas.py
tests/sqlmodel/: conftest.py
tests/sqlmodel/core/: test_filter_config.py  test_nest_multi_join_data.py  test_parse_filters.py  test_uuid.py  test_valid_methods.py
tests/sqlmodel/crud/: test_count.py  test_create.py  test_delete.py  test_exists.py  test_get.py  test_get_joined.py  test_get_multi.py  test_get_multi_by_cursor.py  test_get_multi_joined.py  test_select.py  test_update.py  test_upsert.py
tests/sqlmodel/endpoint/: test_create_item.py  test_custom_endpoint_creator.py  test_custom_route.py  test_delete_item.py  test_deleted_methods.py  test_endpoint_custom_names.py  test_get_item.py  test_get_items.py  test_get_paginated.py  test_included_methods.py  test_update_item.py
usage/crud/: index.html
usage/endpoint/: index.html
usage/overview/: index.html
