[tool.poetry]
name = "fastcrud"
version = "0.9.1"
description = "FastCRUD is a Python package for FastAPI, offering robust async CRUD operations and flexible endpoint creation utilities."
authors = ["Igor Benav <igor.magalhaes.r@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/igorbenav/fastcrud"
include = [
    "LICENSE",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Typing :: Typed"
]

keywords = ["fastapi", "crud", "async", "sqlalchemy", "pydantic"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^2.0.0"
pydantic = "^2.0.0"
SQLAlchemy-Utils = "^0.41.1"
fastapi = ">=0.100.0,<0.110.0"
python-forge = "^18.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
aiosqlite = "^0.19.0"
greenlet = "^3.0.3"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"
tox = "^4.12.1"
uvicorn = "^0.25.0"
sqlmodel = "^0.0.14"
mypy = "^1.9.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
